# rune-deploy

./: Cargo.toml  README.md
example/: Rune.toml
example/src/: main.rn
src/: compile.rs  deploy_main.rs  faux_crate.rs  lockfile.rs  main.rs
