[package]
name = "rune-deploy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rune = { git = "https://github.com/rune-rs/rune" }
rune-modules = { git = "https://github.com/rune-rs/rune" }
structopt = { version = "0.3.25", default-features = false, features = ["wrap_help", "suggestions", "color"] }

serde = { version = "*", features = ["derive"] }
toml = "0.5.8"
anyhow = "1.0.37"

dirs = "4"
log = "*"
bincode = "1.3.3"
serde_cbor = "*"
